@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  May 15 2017, 19:30
+  deviceServiceVersion = 1013427
+	
+  [-] Fixed error with receipt item discount
+  
+********************************************************************************
+
   May 5 2017, 12:50
   deviceServiceVersion = 1013426
 	
